style.css
/* ... */
.grid-box-top img {
  margin: auto;
  max-width: 250px;
  max-height: 125px;
  padding: 10px;
  transform: scale(0.8);
}

.grid-box:hover {
  filter: none;
}

@media (max-width: 600px) {
  .grid-box {
    filter: none;
  }

  .grid-box-top img {
    max-width: 200px;
    max-height: 100px;
    width: initial;
  }
}

.grid-box-bottom {
  flex: 1;
  display: flex;
  text-align: center;
}

.modal {
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%) scale(0);
  transition: .5s;
  border: solid 1px black;
  border-radius: 20px;
  z-index: 10;
  background-color: #eee;
  width: 650px;
  max-width: 80%;
}

.modal.active-modal {
  transform: translate(-50%, -50%) scale(1);
}

.modal-header {
  padding: 10px 15px 0 15px;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.modal-header .title {
  font-weight: bold;
}

.modal-header .close-button {
  cursor: pointer;
  border: none;
  outline: none;
  background: none;
  font-weight: bold;
  font-size: 20pt;
}

.modal-body {
  padding: 0 15px 10px 15px;
}

.modal-body .date {
  font-size: 12pt;
  padding-bottom: 1em;
}

.modal-body .position {
  font-size: 14pt;
}

.modal-body .details {
  font-size: 12pt;
  margin: 0.5em 0 0 0;
  padding-inline-start: 1.5em;
}

.modal-body li {
  padding-bottom: 0.5em;
}

.modal-image {
  display: flex;
  padding-bottom: 0.5em;
  justify-content: center;
}

.modal-image img {
  max-width: 300px;
  max-height: 150px;
  padding-bottom: 0.5em;
}

@media screen and (max-width: 600px) {
  .modal-header {
    font-size: 14pt;
  }

  .modal-body .date, .modal-body .details {
    font-size: 10pt;
  }

  .modal-body .position {
    font-size: 12pt;
  }

  .modal-image img {
    max-width: 200px;
    max-height: 125px;
    width: initial;
  }
}

#overlay {
  position: fixed;
  opacity: 0;
  transition: .5s;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: #808080;
  pointer-events: none;
  display: none;
}

#overlay.active {
  opacity: 0.8;
  pointer-events: all;
  display: block;
}


.grid-box-bottom p {
  margin: auto;
  font-size: 14pt;
}

@media screen and (max-width: 600px) {
  .grid-box-bottom p {
    font-size: 12pt;
  }
}

a.grid-box#blog {
  color: #fff;
}

.projects-list, .blog-list {
  max-width: inherit;
  display: flex;
  align-items: stretch;
  flex-direction: column-reverse;
  flex-wrap: wrap;
  margin: 0 auto 4em auto;
}

.projects-item {
  height: 200px;
  display: flex;
  border-bottom: solid 1px #bebebe;
  align-items: center;
  padding: 1em 0;
  text-decoration: none;
  color: inherit;
  transition: background .5s;
}

.projects-item:hover, .blog-item:hover {
  background-color: #eee;
  transition: background .2s
}

.projects-item#last, .blog-item#last {
  border: none;
}

.projects-item .thumbnail {
  height: 100%;
  width: auto;
  display: flex;
  align-items: center;
  padding: 0 1em;
}

.projects-item img {
  height: 100%;
  width: auto;
  object-fit: contain;
}

.projects-item img#cover {
  border: solid 1px black;
  background-color: #fff;
  width: 200px;
}

.projects-item .description {
  display: flex;
  align-items: stretch;
  flex-direction: column;
  padding: 0 1em;
}

.projects-item .title {
  display: flex;
  font-weight: bold;
}

.projects-item .date {
  display: flex;
  color: #3c3b3b;
  font-size: 14pt;
  padding-top: 1em;
}

@media screen and (max-width: 600px) {
  .projects-item {
    height: 150px;
  }

  .projects-item .title {
    font-size: 12pt;
  }

  .projects-item .date {
    font-size: 10pt;
  }
}

.blog-item {
  height: 1.5em;
  display: flex;
  border-bottom: solid 1px #bebebe;
  align-items: center;
  padding: 1em;
  text-decoration: none;
  color: inherit;
  transition: background .2s;
  justify-content: space-between;
  font-size: 12pt;
  font-weight: bold;
  color: #3c3b3b;
}

@media screen and (max-width: 600px) {
  .blog-item {
    font-size: 10pt;
  }
}

.blog-item .title {
  flex: 1;
}

.blog-item .info {
  flex: 0 1 auto;
  padding: 0 1rem;
  text-align: center;
}

.blog-item .date {
  flex: 1;
  text-align: right;
}

#blog {
  background: url(assets/svg/medium.svg) no-repeat center center;
  background-size: contain;
  transition: background .5s;
}

#blog:hover {
  background-color: gray;
  transition: background .5s;
  background-image: none;
}

.jumbotron {
  background-repeat: no-repeat;
  background-size: cover;
  height: 100%; 
}

.jumbotron#olin {
  background-image: url(assets/img/background/olin.jpg);
  background-position: center top;
}

.jumbotron#hermosa {
  background-image: url(assets/img/background/hermosa.JPG);
  background-position: 0 5%;
}

@media (min-width:1450px) {
  .jumbotron#hermosa {
    background-position: 0 35%;
  }
}

.jumbotron .container {
  position: relative;
  top: 20%;
}

.jumbotron h2 {
  color: #fff;
  text-align: right; 
}

.jumbotron p {
  color: #fff; 
  text-align: right; 
}

@media screen and (max-width: 600px) {
  .jumbotron h2 {
    font-size: 18pt;
  }

  .jumbotron p {
    font-size: 12pt;
  }
}

.connect {
  display: flex;
  flex-wrap: wrap;
  max-width: inherit;
  flex-direction: row;
  padding-top: 1em;
  justify-content: flex-end;
}

.btn > * {
  display: flex;
  height: 40px;
  width: auto;
  pointer-events: fill;
  padding-left: 1em;
  background-repeat: no-repeat;
}

.footer {
  background: #000;
}

.footer .text {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  justify-content: space-between;
  color: #fff;
  font-size: 12pt;
}

.copyright {
  display: flex;
  align-items: center;
  flex-wrap: nowrap;
  width: 300px;
  padding: .5em 0;
}

.copyright img {
  max-width: 50px;
  padding-right: 1rem;
  display: flex;
}

.willie {
  color: #c4c4c4;
  padding: .5em 0;
}

.willie a {
  text-decoration: none;
  font-weight: bold;
  color: #7c198c;
}

